Refactor UserService with detailed Javadoc comments and improved logic